--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
                     <div class="row g-4">
                         <div class="col-md-6">
                             <h3 class="text-uppercase mb-3">2016 yildan beri</h3>
-                            <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos.</p>
+                            <p class="mb-0">Men 2016 yildan beri soch turmagi bilan shug’ullanaman.Mening tajribam mijozlarning eng nozik talablarini qondirishga imkon beradi, ularga ularning noyob uslubiga mos individual yechimlar taklif etaman. Mijozlarim menga eng qimmatli narsani — ularning tashqi ko’rinishi va kayfiyatini ishonib topshirganliklari bilan faxrlanaman.</p>
                         </div>
                         <div class="col-md-6">
                             <h3 class="text-uppercase mb-3">562+ client</h3>
-                            <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos.</p>
+                            <p class="mb-0">Sizning shaxsiy sochingizni kesuvchi — bu faqat hunarmand emas, balki sizning afzalliklaringizni biladigan va doimo yangi va yangilangan narsalarni taklif qilishga tayyor bo’lgan odam. Doimiy mijozlar bilan maxsus aloqa o’rnatiladi, bu har bir kishining shaxsiyatini va uslubini aks ettiruvchi ideal obrazlarni yaratishga imkon beradi. Sizning sochingizni kesuvchi — bu har qanday vaziyatda sizni a’lo darajada ko’rinishga yordam beradigan ishonchli shaxs.</p>
                         </div>
                     </div>
                 </div>
